--- a/PetGuardWeb/pom.xml
+++ b/PetGuardWeb/pom.xml
@@ -48,5 +48,10 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.16</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 	</dependencies>
 </project>
